Modificações referentes ao suporte a localização levando em consideração o País de origem. Antes usava somente a codificação iso639. Com a alteração, usa-se em conjunto a iso639 com a iso3166 assim, o Brasil por exemplo passa a ser representado como pt-BR, sendo o pt referente a iso639 (Lingua) com a iso3166(País).
Ainda precisa de melhorias, como por exemplo, repensar o arquivo de configurações que contém os códigos de localização. Tive de alterar o mesmo para ter uma codificação interna, que no momento é uma cópia da iso639_1, admitindo codificação proprietária errônea. (vide o exemplo do Brasil, sendo utilizado pb, que é um código inválido)

--- a/source/net/filebot/Language.properties
+++ b/source/net/filebot/Language.properties
@@ -1,45 +1,46 @@
 # available languages
-languages.ui = sq,ar,hy,pb,bg,ca,zh,hr,cs,da,nl,en,et,fi,fr,de,el,he,hi,hu,id,it,ja,ko,lv,lt,mk,ms,no,fa,pl,pt,ro,ru,sr,sk,sl,es,sv,th,tr,vi
+languages.ui = sq,ar,hy,bg,ca,zh,hr,cs,da,nl,en,et,fi,fr,de,el,he,hi,hu,id,it,ja,ko,lv,lt,mk,ms,no,fa,pl,pt,pb,ro,ru,sr,sk,sl,es,sv,th,tr,vi
 languages.common = en,de,fr,es,pt,ru,ja,zh
-sq: sqi	alb	Albanian
-ar: ara	ara	Arabic
-hy: hye	arm	Armenian
-pb: pob	pob	Brazilian	Portuguese (BR)
-bg: bul	bul	Bulgarian
-ca: cat	cat	Catalan
-zh: zho	chi	Chinese
-hr: hrv	hrv	Croatian
-cs: ces	cze	Czech
-da: dan	dan	Danish
-nl: nld	dut	Dutch
-en: eng	eng	English
-et: est	est	Estonian
-fi: fin	fin	Finnish
-fr: fra	fre	French
-de: deu	ger	German
-el: ell	gre	Greek
-he: heb	heb	Hebrew
-hi: hin	hin	Hindi
-hu: hun	hun	Hungarian
-id: ind	ind	Indonesian
-it: ita	ita	Italian
-ja: jpn	jpn	Japanese
-ko: kor	kor	Korean
-lv: lav	lav	Latvian
-lt: lit	lit	Lithuanian
-mk: mkd	mac	Macedonian
-ms: msa	may	Malay
-no: nor	nor	Norwegian
-fa: fas	per	Persian
-pl: pol	pol	Polish
-pt: por	por	Portuguese
-ro: ron	rum	Romanian
-ru: rus	rus	Russian
-sr: srp	srp	Serbian
-sk: slk	slo	Slovak
-sl: slv	slv	Slovenian
-es: spa	spa	Spanish
-sv: swe	swe	Swedish
-th: tha	tha	Thai
-tr: tur	tur	Turkish
-vi: vie	vie	Vietnamese
+# code: iso639_1 iso639_3 iso639_2B iso3166-1 nome
+sq: sq	sqi	alb	al	Albanian
+ar: ar	ara	ara	eg	Arabic
+hy: hy	hye	arm	am	Armenian
+bg: bg	bul	bul	bg	Bulgarian
+ca: ca	cat	cat	es	Catalan
+zh: zh	zho	chi	cn	Chinese
+hr: hr	hrv	hrv	hr	Croatian
+cs: cs	ces	cze	cz	Czech
+da: da	dan	dan	dk	Danish
+nl: nl	nld	dut	de	Dutch
+en: en	eng	eng	us	English
+et: et	est	est	ee	Estonian
+fi: fi	fin	fin	fi	Finnish
+fr: fr	fra	fre	fr	French
+de: de	deu	ger	de	German
+el: el	ell	gre	gr	Greek
+he: he	heb	heb	il	Hebrew
+hi: hi	hin	hin	in	Hindi
+hu: hu	hun	hun	hu	Hungarian
+id: id	ind	ind	id	Indonesian
+it: it	ita	ita	it	Italian
+ja: ja	jpn	jpn	jp	Japanese
+ko: ko	kor	kor	kr	Korean
+lv: lv	lav	lav	lv	Latvian
+lt: lt	lit	lit	lt	Lithuanian
+mk: mk	mkd	mac	mk	Macedonian
+ms: ms	msa	may	my	Malay
+no: no	nor	nor	no	Norwegian
+fa: fa	fas	per	ir	Persian
+pl: pl	pol	pol	pl	Polish
+pt: pt	por	por	pt	Portuguese
+pb: pt	por	por	br	Brazilian	Portuguese	(BR)
+ro: ro	ron	rum	ro	Romanian
+ru: ru	rus	rus	ru	Russian
+sr: sr	srp	srp	rs	Serbian
+sk: sk	slk	slo	sk	Slovak
+sl: sl	slv	slv	si	Slovenian
+es: es	spa	spa	es	Spanish
+sv: sv	swe	swe	se	Swedish
+th: th	tha	tha	th	Thai
+tr: tr	tur	tur	tr	Turkish
+vi: vi	vie	vie	vn	Vietnamese
